grammar/CplabParser.cpp

// Generated from E:/Homework/cplab/cact/grammar/CplabParser.g4 by ANTLR 4.13.1


#include "CplabParserVisitor.h"

#include "CplabParser.h"


using namespace antlrcpp;
using namespace cplab_parser;

using namespace antlr4;

namespace {

struct CplabParserStaticData final {
  CplabParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CplabParserStaticData(const CplabParserStaticData&) = delete;
  CplabParserStaticData(CplabParserStaticData&&) = delete;
  CplabParserStaticData& operator=(const CplabParserStaticData&) = delete;
  CplabParserStaticData& operator=(CplabParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cplabparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CplabParserStaticData *cplabparserParserStaticData = nullptr;

void cplabparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cplabparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(cplabparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CplabParserStaticData>(
    std::vector<std::string>{
      "compilation_unit", "declaration", "constant_declaration", "basic_type", 
      "constant_definition", "constant_initial_value", "variable_declaration", 
      "variable_definition", "function_definition", "function_type", "function_formal_params", 
      "function_formal_param", "block", "block_item", "statement", "expression", 
      "constant_expression", "condition", "left_value", "number", "function_real_params", 
      "primary_expression", "unary_expression", "multiplicative_expression", 
      "additive_expression", "relational_expression", "equal_expression", 
      "logical_and_expression", "logical_or_expression"
    },
    std::vector<std::string>{
      "", "'const'", "'int'", "'char'", "'float'", "'void'", "'if'", "'else'", 
      "'while'", "'break'", "'continue'", "'return'", "'='", "'=='", "'&&'", 
      "'||'", "'!='", "'<'", "'<='", "'>'", "'>='", "'.'", "','", "';'", 
      "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'|'", 
      "'!'", "'*'", "'/'", "'%'"
    },
    std::vector<std::string>{
      "", "Const", "Int", "Char", "Float", "Void", "If", "Else", "While", 
      "Break", "Continue", "Return", "Equal", "LogicalEqual", "LogicalAnd", 
      "LogicalOr", "NotEqual", "Less", "LessEqual", "Greater", "GreaterEqual", 
      "Period", "Comma", "Semicolon", "Colon", "LeftParenthesis", "RightParenthesis", 
      "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Plus", 
      "Minus", "Pipe", "ExclamationMark", "Asterisk", "Slash", "Percent", 
      "Identifier", "IntegerConstant", "FloatConstant", "CharConstant", 
      "LineComment", "BlockComment", "NewLine", "WhiteSpaces"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cplabparserParserStaticData = staticData.release();
}

}

CplabParser::CplabParser(TokenStream *input) : CplabParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CplabParser::CplabParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CplabParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cplabparserParserStaticData->atn, cplabparserParserStaticData->decisionToDFA, cplabparserParserStaticData->sharedContextCache, options);
}

CplabParser::~CplabParser() {
  delete _interpreter;
}

const atn::ATN& CplabParser::getATN() const {
  return *cplabparserParserStaticData->atn;
}

std::string CplabParser::getGrammarFileName() const {
  return "CplabParser.g4";
}

const std::vector<std::string>& CplabParser::getRuleNames() const {
  return cplabparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CplabParser::getVocabulary() const {
  return cplabparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CplabParser::getSerializedATN() const {
  return cplabparserParserStaticData->serializedATN;
}


//----------------- Compilation_unitContext ------------------------------------------------------------------

CplabParser::Compilation_unitContext::Compilation_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CplabParser::DeclarationContext *> CplabParser::Compilation_unitContext::declaration() {
  return getRuleContexts<CplabParser::DeclarationContext>();
}

CplabParser::DeclarationContext* CplabParser::Compilation_unitContext::declaration(size_t i) {
  return getRuleContext<CplabParser::DeclarationContext>(i);
}

std::vector<CplabParser::Function_definitionContext *> CplabParser::Compilation_unitContext::function_definition() {
  return getRuleContexts<CplabParser::Function_definitionContext>();
}

CplabParser::Function_definitionContext* CplabParser::Compilation_unitContext::function_definition(size_t i) {
  return getRuleContext<CplabParser::Function_definitionContext>(i);
}


size_t CplabParser::Compilation_unitContext::getRuleIndex() const {
  return CplabParser::RuleCompilation_unit;
}


std::any CplabParser::Compilation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitCompilation_unit(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Compilation_unitContext* CplabParser::compilation_unit() {
  Compilation_unitContext *_localctx = _tracker.createInstance<Compilation_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, CplabParser::RuleCompilation_unit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 62) != 0)) {
      setState(60);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(58);
        declaration();
        break;
      }

      case 2: {
        setState(59);
        function_definition();
        break;
      }

      default:
        break;
      }
      setState(64);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

CplabParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CplabParser::Constant_declarationContext* CplabParser::DeclarationContext::constant_declaration() {
  return getRuleContext<CplabParser::Constant_declarationContext>(0);
}

CplabParser::Variable_declarationContext* CplabParser::DeclarationContext::variable_declaration() {
  return getRuleContext<CplabParser::Variable_declarationContext>(0);
}


size_t CplabParser::DeclarationContext::getRuleIndex() const {
  return CplabParser::RuleDeclaration;
}


std::any CplabParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::DeclarationContext* CplabParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, CplabParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CplabParser::Const: {
        enterOuterAlt(_localctx, 1);
        setState(65);
        constant_declaration();
        break;
      }

      case CplabParser::Int:
      case CplabParser::Char:
      case CplabParser::Float: {
        enterOuterAlt(_localctx, 2);
        setState(66);
        variable_declaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Constant_declarationContext ------------------------------------------------------------------

CplabParser::Constant_declarationContext::Constant_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CplabParser::Constant_declarationContext::Const() {
  return getToken(CplabParser::Const, 0);
}

CplabParser::Basic_typeContext* CplabParser::Constant_declarationContext::basic_type() {
  return getRuleContext<CplabParser::Basic_typeContext>(0);
}

std::vector<CplabParser::Constant_definitionContext *> CplabParser::Constant_declarationContext::constant_definition() {
  return getRuleContexts<CplabParser::Constant_definitionContext>();
}

CplabParser::Constant_definitionContext* CplabParser::Constant_declarationContext::constant_definition(size_t i) {
  return getRuleContext<CplabParser::Constant_definitionContext>(i);
}

tree::TerminalNode* CplabParser::Constant_declarationContext::Semicolon() {
  return getToken(CplabParser::Semicolon, 0);
}

std::vector<tree::TerminalNode *> CplabParser::Constant_declarationContext::Comma() {
  return getTokens(CplabParser::Comma);
}

tree::TerminalNode* CplabParser::Constant_declarationContext::Comma(size_t i) {
  return getToken(CplabParser::Comma, i);
}


size_t CplabParser::Constant_declarationContext::getRuleIndex() const {
  return CplabParser::RuleConstant_declaration;
}


std::any CplabParser::Constant_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitConstant_declaration(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Constant_declarationContext* CplabParser::constant_declaration() {
  Constant_declarationContext *_localctx = _tracker.createInstance<Constant_declarationContext>(_ctx, getState());
  enterRule(_localctx, 4, CplabParser::RuleConstant_declaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(CplabParser::Const);
    setState(70);
    basic_type();
    setState(71);
    constant_definition();
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CplabParser::Comma) {
      setState(72);
      match(CplabParser::Comma);
      setState(73);
      constant_definition();
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(79);
    match(CplabParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Basic_typeContext ------------------------------------------------------------------

CplabParser::Basic_typeContext::Basic_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CplabParser::Basic_typeContext::Int() {
  return getToken(CplabParser::Int, 0);
}

tree::TerminalNode* CplabParser::Basic_typeContext::Float() {
  return getToken(CplabParser::Float, 0);
}

tree::TerminalNode* CplabParser::Basic_typeContext::Char() {
  return getToken(CplabParser::Char, 0);
}


size_t CplabParser::Basic_typeContext::getRuleIndex() const {
  return CplabParser::RuleBasic_type;
}


std::any CplabParser::Basic_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitBasic_type(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Basic_typeContext* CplabParser::basic_type() {
  Basic_typeContext *_localctx = _tracker.createInstance<Basic_typeContext>(_ctx, getState());
  enterRule(_localctx, 6, CplabParser::RuleBasic_type);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 28) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Constant_definitionContext ------------------------------------------------------------------

CplabParser::Constant_definitionContext::Constant_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CplabParser::Constant_definitionContext::Identifier() {
  return getToken(CplabParser::Identifier, 0);
}

tree::TerminalNode* CplabParser::Constant_definitionContext::Equal() {
  return getToken(CplabParser::Equal, 0);
}

CplabParser::Constant_initial_valueContext* CplabParser::Constant_definitionContext::constant_initial_value() {
  return getRuleContext<CplabParser::Constant_initial_valueContext>(0);
}

std::vector<tree::TerminalNode *> CplabParser::Constant_definitionContext::LeftBracket() {
  return getTokens(CplabParser::LeftBracket);
}

tree::TerminalNode* CplabParser::Constant_definitionContext::LeftBracket(size_t i) {
  return getToken(CplabParser::LeftBracket, i);
}

std::vector<tree::TerminalNode *> CplabParser::Constant_definitionContext::IntegerConstant() {
  return getTokens(CplabParser::IntegerConstant);
}

tree::TerminalNode* CplabParser::Constant_definitionContext::IntegerConstant(size_t i) {
  return getToken(CplabParser::IntegerConstant, i);
}

std::vector<tree::TerminalNode *> CplabParser::Constant_definitionContext::RightBracket() {
  return getTokens(CplabParser::RightBracket);
}

tree::TerminalNode* CplabParser::Constant_definitionContext::RightBracket(size_t i) {
  return getToken(CplabParser::RightBracket, i);
}


size_t CplabParser::Constant_definitionContext::getRuleIndex() const {
  return CplabParser::RuleConstant_definition;
}


std::any CplabParser::Constant_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitConstant_definition(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Constant_definitionContext* CplabParser::constant_definition() {
  Constant_definitionContext *_localctx = _tracker.createInstance<Constant_definitionContext>(_ctx, getState());
  enterRule(_localctx, 8, CplabParser::RuleConstant_definition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(CplabParser::Identifier);
    setState(89);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CplabParser::LeftBracket) {
      setState(84);
      match(CplabParser::LeftBracket);
      setState(85);
      match(CplabParser::IntegerConstant);
      setState(86);
      match(CplabParser::RightBracket);
      setState(91);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    match(CplabParser::Equal);
    setState(93);
    constant_initial_value();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Constant_initial_valueContext ------------------------------------------------------------------

CplabParser::Constant_initial_valueContext::Constant_initial_valueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CplabParser::Constant_expressionContext* CplabParser::Constant_initial_valueContext::constant_expression() {
  return getRuleContext<CplabParser::Constant_expressionContext>(0);
}

tree::TerminalNode* CplabParser::Constant_initial_valueContext::LeftBrace() {
  return getToken(CplabParser::LeftBrace, 0);
}

tree::TerminalNode* CplabParser::Constant_initial_valueContext::RightBrace() {
  return getToken(CplabParser::RightBrace, 0);
}

std::vector<CplabParser::Constant_initial_valueContext *> CplabParser::Constant_initial_valueContext::constant_initial_value() {
  return getRuleContexts<CplabParser::Constant_initial_valueContext>();
}

CplabParser::Constant_initial_valueContext* CplabParser::Constant_initial_valueContext::constant_initial_value(size_t i) {
  return getRuleContext<CplabParser::Constant_initial_valueContext>(i);
}

std::vector<tree::TerminalNode *> CplabParser::Constant_initial_valueContext::Comma() {
  return getTokens(CplabParser::Comma);
}

tree::TerminalNode* CplabParser::Constant_initial_valueContext::Comma(size_t i) {
  return getToken(CplabParser::Comma, i);
}


size_t CplabParser::Constant_initial_valueContext::getRuleIndex() const {
  return CplabParser::RuleConstant_initial_value;
}


std::any CplabParser::Constant_initial_valueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitConstant_initial_value(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Constant_initial_valueContext* CplabParser::constant_initial_value() {
  Constant_initial_valueContext *_localctx = _tracker.createInstance<Constant_initial_valueContext>(_ctx, getState());
  enterRule(_localctx, 10, CplabParser::RuleConstant_initial_value);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CplabParser::LeftParenthesis:
      case CplabParser::Plus:
      case CplabParser::Minus:
      case CplabParser::ExclamationMark:
      case CplabParser::Identifier:
      case CplabParser::IntegerConstant:
      case CplabParser::FloatConstant:
      case CplabParser::CharConstant: {
        enterOuterAlt(_localctx, 1);
        setState(95);
        constant_expression();
        break;
      }

      case CplabParser::LeftBrace: {
        enterOuterAlt(_localctx, 2);
        setState(96);
        match(CplabParser::LeftBrace);
        setState(105);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 4147361349632) != 0)) {
          setState(97);
          constant_initial_value();
          setState(102);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == CplabParser::Comma) {
            setState(98);
            match(CplabParser::Comma);
            setState(99);
            constant_initial_value();
            setState(104);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(107);
        match(CplabParser::RightBrace);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_declarationContext ------------------------------------------------------------------

CplabParser::Variable_declarationContext::Variable_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CplabParser::Basic_typeContext* CplabParser::Variable_declarationContext::basic_type() {
  return getRuleContext<CplabParser::Basic_typeContext>(0);
}

std::vector<CplabParser::Variable_definitionContext *> CplabParser::Variable_declarationContext::variable_definition() {
  return getRuleContexts<CplabParser::Variable_definitionContext>();
}

CplabParser::Variable_definitionContext* CplabParser::Variable_declarationContext::variable_definition(size_t i) {
  return getRuleContext<CplabParser::Variable_definitionContext>(i);
}

tree::TerminalNode* CplabParser::Variable_declarationContext::Semicolon() {
  return getToken(CplabParser::Semicolon, 0);
}

std::vector<tree::TerminalNode *> CplabParser::Variable_declarationContext::Comma() {
  return getTokens(CplabParser::Comma);
}

tree::TerminalNode* CplabParser::Variable_declarationContext::Comma(size_t i) {
  return getToken(CplabParser::Comma, i);
}


size_t CplabParser::Variable_declarationContext::getRuleIndex() const {
  return CplabParser::RuleVariable_declaration;
}


std::any CplabParser::Variable_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitVariable_declaration(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Variable_declarationContext* CplabParser::variable_declaration() {
  Variable_declarationContext *_localctx = _tracker.createInstance<Variable_declarationContext>(_ctx, getState());
  enterRule(_localctx, 12, CplabParser::RuleVariable_declaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    basic_type();
    setState(111);
    variable_definition();
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CplabParser::Comma) {
      setState(112);
      match(CplabParser::Comma);
      setState(113);
      variable_definition();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(119);
    match(CplabParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_definitionContext ------------------------------------------------------------------

CplabParser::Variable_definitionContext::Variable_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CplabParser::Variable_definitionContext::Identifier() {
  return getToken(CplabParser::Identifier, 0);
}

std::vector<tree::TerminalNode *> CplabParser::Variable_definitionContext::LeftBracket() {
  return getTokens(CplabParser::LeftBracket);
}

tree::TerminalNode* CplabParser::Variable_definitionContext::LeftBracket(size_t i) {
  return getToken(CplabParser::LeftBracket, i);
}

std::vector<tree::TerminalNode *> CplabParser::Variable_definitionContext::IntegerConstant() {
  return getTokens(CplabParser::IntegerConstant);
}

tree::TerminalNode* CplabParser::Variable_definitionContext::IntegerConstant(size_t i) {
  return getToken(CplabParser::IntegerConstant, i);
}

std::vector<tree::TerminalNode *> CplabParser::Variable_definitionContext::RightBracket() {
  return getTokens(CplabParser::RightBracket);
}

tree::TerminalNode* CplabParser::Variable_definitionContext::RightBracket(size_t i) {
  return getToken(CplabParser::RightBracket, i);
}

tree::TerminalNode* CplabParser::Variable_definitionContext::Equal() {
  return getToken(CplabParser::Equal, 0);
}

CplabParser::Constant_initial_valueContext* CplabParser::Variable_definitionContext::constant_initial_value() {
  return getRuleContext<CplabParser::Constant_initial_valueContext>(0);
}


size_t CplabParser::Variable_definitionContext::getRuleIndex() const {
  return CplabParser::RuleVariable_definition;
}


std::any CplabParser::Variable_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitVariable_definition(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Variable_definitionContext* CplabParser::variable_definition() {
  Variable_definitionContext *_localctx = _tracker.createInstance<Variable_definitionContext>(_ctx, getState());
  enterRule(_localctx, 14, CplabParser::RuleVariable_definition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    match(CplabParser::Identifier);
    setState(127);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CplabParser::LeftBracket) {
      setState(122);
      match(CplabParser::LeftBracket);
      setState(123);
      match(CplabParser::IntegerConstant);
      setState(124);
      match(CplabParser::RightBracket);
      setState(129);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(132);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CplabParser::Equal) {
      setState(130);
      match(CplabParser::Equal);
      setState(131);
      constant_initial_value();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_definitionContext ------------------------------------------------------------------

CplabParser::Function_definitionContext::Function_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CplabParser::Function_typeContext* CplabParser::Function_definitionContext::function_type() {
  return getRuleContext<CplabParser::Function_typeContext>(0);
}

tree::TerminalNode* CplabParser::Function_definitionContext::Identifier() {
  return getToken(CplabParser::Identifier, 0);
}

tree::TerminalNode* CplabParser::Function_definitionContext::LeftParenthesis() {
  return getToken(CplabParser::LeftParenthesis, 0);
}

tree::TerminalNode* CplabParser::Function_definitionContext::RightParenthesis() {
  return getToken(CplabParser::RightParenthesis, 0);
}

CplabParser::BlockContext* CplabParser::Function_definitionContext::block() {
  return getRuleContext<CplabParser::BlockContext>(0);
}

CplabParser::Function_formal_paramsContext* CplabParser::Function_definitionContext::function_formal_params() {
  return getRuleContext<CplabParser::Function_formal_paramsContext>(0);
}


size_t CplabParser::Function_definitionContext::getRuleIndex() const {
  return CplabParser::RuleFunction_definition;
}


std::any CplabParser::Function_definitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitFunction_definition(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Function_definitionContext* CplabParser::function_definition() {
  Function_definitionContext *_localctx = _tracker.createInstance<Function_definitionContext>(_ctx, getState());
  enterRule(_localctx, 16, CplabParser::RuleFunction_definition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    function_type();
    setState(135);
    match(CplabParser::Identifier);
    setState(136);
    match(CplabParser::LeftParenthesis);
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 28) != 0)) {
      setState(137);
      function_formal_params();
    }
    setState(140);
    match(CplabParser::RightParenthesis);
    setState(141);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_typeContext ------------------------------------------------------------------

CplabParser::Function_typeContext::Function_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CplabParser::Function_typeContext::Void() {
  return getToken(CplabParser::Void, 0);
}

tree::TerminalNode* CplabParser::Function_typeContext::Int() {
  return getToken(CplabParser::Int, 0);
}

tree::TerminalNode* CplabParser::Function_typeContext::Float() {
  return getToken(CplabParser::Float, 0);
}

tree::TerminalNode* CplabParser::Function_typeContext::Char() {
  return getToken(CplabParser::Char, 0);
}


size_t CplabParser::Function_typeContext::getRuleIndex() const {
  return CplabParser::RuleFunction_type;
}


std::any CplabParser::Function_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CplabParserVisitor*>(visitor))
    return parserVisitor->visitFunction_type(this);
  else
    return visitor->visitChildren(this);
}

CplabParser::Function_typeContext* CplabParser::function_type() {
  Function_typeContext *_localctx = _tracker.createInstance<Function_typeContext>(_ctx, getState());
  enterRule(_localctx, 18, CplabParser::RuleFunction_type);
  size_t _la = 0;
